fix fair attribute notebook and allow context for get_ld()

--- a/docs/practical_examples/knowledge_graph.ipynb
+++ b/docs/practical_examples/knowledge_graph.ipynb
@@ -46,192 +46,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "d4d871e0-5bff-42f7-a27d-f1f0337dd964",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "  \"@context\": {\n",
-      "    \"dcterms\": \"http://purl.org/dc/terms/\",\n",
-      "    \"ex\": \"https://example.org#\",\n",
-      "    \"foaf\": \"http://xmlns.com/foaf/0.1/\",\n",
-      "    \"hdf\": \"http://purl.allotrope.org/ontologies/hdf5/1.8#\",\n",
-      "    \"prov\": \"http://www.w3.org/ns/prov#\",\n",
-      "    \"rdf\": \"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\n",
-      "  },\n",
-      "  \"@graph\": [\n",
-      "    {\n",
-      "      \"@id\": \"ex:tmp2.hdf/nd-array__dataspace_dimension_0\",\n",
-      "      \"@type\": \"hdf:DataspaceDimension\",\n",
-      "      \"hdf:dimensionIndex\": 0,\n",
-      "      \"hdf:size\": 2\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"ex:tmp2.hdf/test__dataspace\",\n",
-      "      \"@type\": \"hdf:ScalarDataspace\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"ex:tmp2.hdf/contact\",\n",
-      "      \"@type\": \"hdf:Group\",\n",
-      "      \"dcterms:relation\": {\n",
-      "        \"@id\": \"https://orcid.org/0000-0001-8729-0482\"\n",
-      "      },\n",
-      "      \"hdf:attribute\": [\n",
-      "        {\n",
-      "          \"@id\": \"ex:tmp2.hdf/contact@hint\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"@id\": \"ex:tmp2.hdf/contact@lname\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"@id\": \"ex:tmp2.hdf/contact@fname\"\n",
-      "        }\n",
-      "      ],\n",
-      "      \"hdf:name\": \"/contact\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"ex:tmp2.hdf/test\",\n",
-      "      \"@type\": \"hdf:Dataset\",\n",
-      "      \"hdf:dataspace\": {\n",
-      "        \"@id\": \"ex:tmp2.hdf/test__dataspace\"\n",
-      "      },\n",
-      "      \"hdf:datatype\": [\n",
-      "        {\n",
-      "          \"@id\": \"hdf:H5T_IEEE_F64LE\"\n",
-      "        },\n",
-      "        \"H5T_FLOAT\"\n",
-      "      ],\n",
-      "      \"hdf:layout\": {\n",
-      "        \"@id\": \"hdf:H5D_CONTIGUOUS\"\n",
-      "      },\n",
-      "      \"hdf:maximumSize\": -1,\n",
-      "      \"hdf:name\": \"/test\",\n",
-      "      \"hdf:rank\": 0,\n",
-      "      \"hdf:size\": 1,\n",
-      "      \"hdf:value\": 4.3\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"ex:tmp2.hdf/nd-array__chunk_dimension_0\",\n",
-      "      \"@type\": \"hdf:DataspaceDimension\",\n",
-      "      \"hdf:dimensionIndex\": 0,\n",
-      "      \"hdf:size\": 1\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"ex:tmp2.hdf/contact@fname\",\n",
-      "      \"@type\": \"hdf:StringAttribute\",\n",
-      "      \"hdf:data\": \"Matthias\",\n",
-      "      \"hdf:name\": \"fname\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"ex:tmp2.hdf/nd-array__chunk_dimension_1\",\n",
-      "      \"@type\": \"hdf:DataspaceDimension\",\n",
-      "      \"hdf:dimensionIndex\": 1,\n",
-      "      \"hdf:size\": 3\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"ex:tmp2.hdf\",\n",
-      "      \"@type\": \"hdf:File\",\n",
-      "      \"hdf:rootGroup\": {\n",
-      "        \"@id\": \"ex:tmp2.hdf/\"\n",
-      "      }\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"ex:tmp2.hdf/nd-array\",\n",
-      "      \"@type\": \"hdf:Dataset\",\n",
-      "      \"hdf:chunk\": {\n",
-      "        \"@id\": \"ex:tmp2.hdf/nd-array__chunk_dimensions\"\n",
-      "      },\n",
-      "      \"hdf:dataspace\": {\n",
-      "        \"@id\": \"ex:tmp2.hdf/nd-array__dataspace\"\n",
-      "      },\n",
-      "      \"hdf:datatype\": [\n",
-      "        \"H5T_FLOAT\",\n",
-      "        {\n",
-      "          \"@id\": \"hdf:H5T_IEEE_F64LE\"\n",
-      "        }\n",
-      "      ],\n",
-      "      \"hdf:layout\": {\n",
-      "        \"@id\": \"hdf:H5D_CHUNKED\"\n",
-      "      },\n",
-      "      \"hdf:maximumSize\": 6,\n",
-      "      \"hdf:name\": \"/nd-array\",\n",
-      "      \"hdf:rank\": 2,\n",
-      "      \"hdf:size\": 6\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"ex:tmp2.hdf/\",\n",
-      "      \"@type\": \"hdf:Group\",\n",
-      "      \"hdf:member\": [\n",
-      "        {\n",
-      "          \"@id\": \"ex:tmp2.hdf/contact\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"@id\": \"ex:tmp2.hdf/nd-array\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"@id\": \"ex:tmp2.hdf/test\"\n",
-      "        }\n",
-      "      ],\n",
-      "      \"hdf:name\": \"/\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"https://orcid.org/0000-0001-8729-0482\",\n",
-      "      \"@type\": \"prov:Person\",\n",
-      "      \"foaf:firstName\": \"Matthias\",\n",
-      "      \"foaf:lastName\": \"Probst\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"ex:tmp2.hdf/nd-array__dataspace\",\n",
-      "      \"@type\": \"hdf:SimpleDataspace\",\n",
-      "      \"hdf:dimension\": [\n",
-      "        {\n",
-      "          \"@id\": \"ex:tmp2.hdf/nd-array__dataspace_dimension_0\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"@id\": \"ex:tmp2.hdf/nd-array__dataspace_dimension_1\"\n",
-      "        }\n",
-      "      ]\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"ex:tmp2.hdf/nd-array__dataspace_dimension_1\",\n",
-      "      \"@type\": \"hdf:DataspaceDimension\",\n",
-      "      \"hdf:dimensionIndex\": 1,\n",
-      "      \"hdf:size\": 3\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"ex:tmp2.hdf/contact@lname\",\n",
-      "      \"@type\": \"hdf:StringAttribute\",\n",
-      "      \"hdf:data\": \"Probst\",\n",
-      "      \"hdf:name\": \"lname\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"hdf:H5T_IEEE_F64LE\",\n",
-      "      \"@type\": \"hdf:Datatype\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"ex:tmp2.hdf/nd-array__chunk_dimensions\",\n",
-      "      \"@type\": \"hdf:ChunkDimension\",\n",
-      "      \"hdf:dimension\": [\n",
-      "        {\n",
-      "          \"@id\": \"ex:tmp2.hdf/nd-array__chunk_dimension_1\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"@id\": \"ex:tmp2.hdf/nd-array__chunk_dimension_0\"\n",
-      "        }\n",
-      "      ]\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"ex:tmp2.hdf/contact@hint\",\n",
-      "      \"@type\": \"hdf:StringAttribute\",\n",
-      "      \"hdf:data\": \"This group could be representing a person.\",\n",
-      "      \"hdf:name\": \"hint\"\n",
-      "    }\n",
-      "  ]\n",
-      "}\n"
+      "@prefix dcterms: <http://purl.org/dc/terms/> .\n",
+      "@prefix ex: <https://example.org#> .\n",
+      "@prefix foaf: <http://xmlns.com/foaf/0.1/> .\n",
+      "@prefix hdf: <http://purl.allotrope.org/ontologies/hdf5/1.8#> .\n",
+      "@prefix prov: <http://www.w3.org/ns/prov#> .\n",
+      "@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .\n",
+      "\n",
+      "ex:tmp0.hdf a hdf:File ;\n",
+      "    hdf:rootGroup <https://example.org#tmp0.hdf/> .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/> a hdf:Group ;\n",
+      "    hdf:member <https://example.org#tmp0.hdf/contact>,\n",
+      "        <https://example.org#tmp0.hdf/nd-array>,\n",
+      "        <https://example.org#tmp0.hdf/test> ;\n",
+      "    hdf:name \"/\"^^xsd:string .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/contact> a hdf:Group ;\n",
+      "    hdf:attribute <https://example.org#tmp0.hdf/contact@fname>,\n",
+      "        <https://example.org#tmp0.hdf/contact@hint>,\n",
+      "        <https://example.org#tmp0.hdf/contact@lname> ;\n",
+      "    hdf:name \"/contact\"^^xsd:string ;\n",
+      "    dcterms:relation <https://orcid.org/0000-0001-8729-0482> .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/contact@fname> a hdf:StringAttribute ;\n",
+      "    hdf:data \"Matthias\"^^xsd:string ;\n",
+      "    hdf:name \"fname\" .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/contact@hint> a hdf:StringAttribute ;\n",
+      "    hdf:data \"This group could be representing a person.\"^^xsd:string ;\n",
+      "    hdf:name \"hint\" .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/contact@lname> a hdf:StringAttribute ;\n",
+      "    hdf:data \"Probst\"^^xsd:string ;\n",
+      "    hdf:name \"lname\" .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/nd-array> a hdf:Dataset ;\n",
+      "    hdf:chunk <https://example.org#tmp0.hdf/nd-array__chunk_dimensions> ;\n",
+      "    hdf:dataspace <https://example.org#tmp0.hdf/nd-array__dataspace> ;\n",
+      "    hdf:datatype hdf:H5T_IEEE_F64LE,\n",
+      "        \"H5T_FLOAT\" ;\n",
+      "    hdf:layout hdf:H5D_CHUNKED ;\n",
+      "    hdf:maximumSize 6 ;\n",
+      "    hdf:name \"/nd-array\" ;\n",
+      "    hdf:rank 2 ;\n",
+      "    hdf:size 6 .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/nd-array__chunk_dimension_0> a hdf:DataspaceDimension ;\n",
+      "    hdf:dimensionIndex 0 ;\n",
+      "    hdf:size 1 .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/nd-array__chunk_dimension_1> a hdf:DataspaceDimension ;\n",
+      "    hdf:dimensionIndex 1 ;\n",
+      "    hdf:size 3 .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/nd-array__chunk_dimensions> a hdf:ChunkDimension ;\n",
+      "    hdf:dimension <https://example.org#tmp0.hdf/nd-array__chunk_dimension_0>,\n",
+      "        <https://example.org#tmp0.hdf/nd-array__chunk_dimension_1> .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/nd-array__dataspace> a hdf:SimpleDataspace ;\n",
+      "    hdf:dimension <https://example.org#tmp0.hdf/nd-array__dataspace_dimension_0>,\n",
+      "        <https://example.org#tmp0.hdf/nd-array__dataspace_dimension_1> .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/nd-array__dataspace_dimension_0> a hdf:DataspaceDimension ;\n",
+      "    hdf:dimensionIndex 0 ;\n",
+      "    hdf:size 2 .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/nd-array__dataspace_dimension_1> a hdf:DataspaceDimension ;\n",
+      "    hdf:dimensionIndex 1 ;\n",
+      "    hdf:size 3 .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/test> a hdf:Dataset ;\n",
+      "    hdf:dataspace <https://example.org#tmp0.hdf/test__dataspace> ;\n",
+      "    hdf:datatype hdf:H5T_IEEE_F64LE,\n",
+      "        \"H5T_FLOAT\" ;\n",
+      "    hdf:layout hdf:H5D_CONTIGUOUS ;\n",
+      "    hdf:maximumSize -1 ;\n",
+      "    hdf:name \"/test\" ;\n",
+      "    hdf:rank 0 ;\n",
+      "    hdf:size 1 ;\n",
+      "    hdf:value 4.3e+00 .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/test__dataspace> a hdf:ScalarDataspace .\n",
+      "\n",
+      "<https://orcid.org/0000-0001-8729-0482> a prov:Person ;\n",
+      "    foaf:firstName \"Matthias\"^^xsd:string ;\n",
+      "    foaf:lastName \"Probst\"^^xsd:string .\n",
+      "\n",
+      "hdf:H5T_IEEE_F64LE a hdf:Datatype .\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -246,27 +160,27 @@
     "    grp.rdf['hint'].definition = 'A hint gives helpful information on something.'\n",
     "    grp.rdf.type = rdflib.PROV.Person  # --> rdf.type = Person\n",
     "    grp.rdf.subject = 'https://orcid.org/0000-0001-8729-0482'  # -> @id='https://orcid.org/0000-0001-8729-0482'\n",
-    "\n",
-    "    print(h5.dump_jsonld(indent=2, structural=True, file_uri=\"https://example.org#\", context=dict(ex=\"https://example.org#\")))\n",
     "    \n",
-    "graph = h5tbx.get_ld(h5.hdf_filename)"
+    "graph = h5tbx.get_ld(h5.hdf_filename, structural=True, file_uri=\"https://example.org#\", context={\"ex\": \"https://example.org#\"})\n",
+    "print(graph.serialize())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "064a9e31-1fd0-429e-9189-663e950bc52f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "namespaces = {k: str(v) for k, v in dict(graph.namespaces()).items()}\n",
     "kg = kglab.KnowledgeGraph(\n",
     "    import_graph=graph,\n",
-    "    namespaces={k: str(v) for k, v in dict(graph.namespaces()).items()})"
+    "    namespaces=namespaces)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "ce1a26f6-ad59-4014-b5b2-dcee38f11a26",
    "metadata": {},
    "outputs": [],
@@ -276,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "78c9adf7-43f0-4aa1-8740-149bf3a5f74f",
    "metadata": {},
    "outputs": [],
@@ -289,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "e8d13d2e-d66e-4028-8909-7192cfef1bf6",
    "metadata": {},
    "outputs": [
@@ -297,36 +211,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: When  cdn_resources is 'local' jupyter notebook has issues displaying graphics on chrome/safari. Use cdn_resources='in_line' or cdn_resources='remote' if you have issues viewing graphics in a notebook.\n",
-      "graph.html\n"
+      "Warning: When  cdn_resources is 'local' jupyter notebook has issues displaying graphics on chrome/safari. Use cdn_resources='in_line' or cdn_resources='remote' if you have issues viewing graphics in a notebook.\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"600px\"\n",
-       "            src=\"graph.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x16f4bb77760>"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "pyvis_graph = subgraph.build_pyvis_graph(notebook=True, style=VIS_STYLE)\n",
-    "pyvis_graph.show('graph.html', notebook=True)\n",
+    "# pyvis_graph.show('graph.html', notebook=True)\n",
     "# the above call fails in the readthedocs build process... we show an image of the result here:"
    ]
   },
@@ -341,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "a44f0039-00b8-44c5-b237-ccba12993bdd",
    "metadata": {},
    "outputs": [
@@ -362,7 +253,7 @@
       "      \"foaf:lastName\": \"Probst\"\n",
       "    },\n",
       "    {\n",
-      "      \"@id\": \"_:tmp3.hdf/contact\",\n",
+      "      \"@id\": \"https://example.org#tmp1.hdf/contact\",\n",
       "      \"dcterms:relation\": {\n",
       "        \"@id\": \"prov:Person\"\n",
       "      }\n",
@@ -382,14 +273,14 @@
     "    grp.rdf['hint'].definition = 'A hint'\n",
     "    grp.rdf.subject = rdflib.PROV.Person\n",
     "    grp.attrs['@id'] = 'https://orcid.org/0000-0001-8729-0482'\n",
-    "    print(h5.dump_jsonld(indent=2, structural=False))\n",
+    "    print(h5.dump_jsonld(indent=2, structural=False, file_uri=\"https://example.org#\"))\n",
     "\n",
-    "graph = h5tbx.get_ld(h5.hdf_filename, structural=False)"
+    "graph = h5tbx.get_ld(h5.hdf_filename, structural=False, file_uri=\"https://example.org#\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "077911e8-8bc3-4b58-a480-df605bdceae4",
    "metadata": {},
    "outputs": [],
@@ -404,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "67f99459-8351-4819-8a67-2b58d4b1e398",
    "metadata": {},
    "outputs": [
@@ -412,31 +303,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: When  cdn_resources is 'local' jupyter notebook has issues displaying graphics on chrome/safari. Use cdn_resources='in_line' or cdn_resources='remote' if you have issues viewing graphics in a notebook.\n",
-      "tmp.grpah.html\n"
+      "Warning: When  cdn_resources is 'local' jupyter notebook has issues displaying graphics on chrome/safari. Use cdn_resources='in_line' or cdn_resources='remote' if you have issues viewing graphics in a notebook.\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"600px\"\n",
-       "            src=\"tmp.grpah.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x16f174da0b0>"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -448,7 +316,7 @@
     "pyvis_graph = subgraph.build_pyvis_graph(notebook=True, style=VIS_STYLE)\n",
     "\n",
     "pyvis_graph.force_atlas_2based(overlap=0)\n",
-    "pyvis_graph.show(\"tmp.grpah.html\", local=True, notebook=True)\n",
+    "# pyvis_graph.show(\"tmp.grpah.html\", local=True, notebook=True)\n",
     "# the above call fails in the readthedocs build process... we show an image of the result here:"
    ]
   },
