Improved json dump

--- a/docs/practical_examples/knowledge_graph.ipynb
+++ b/docs/practical_examples/knowledge_graph.ipynb
@@ -30,7 +30,8 @@
    "outputs": [],
    "source": [
     "import kglab\n",
-    "import rdflib"
+    "import rdflib\n",
+    "import numpy as np"
    ]
   },
   {
@@ -55,44 +56,103 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "  \"@context\": {\n",
-      "    \"foaf\": \"http://xmlns.com/foaf/0.1/\",\n",
-      "    \"hdf\": \"http://purl.allotrope.org/ontologies/hdf5/1.8#\",\n",
-      "    \"prov\": \"http://www.w3.org/ns/prov#\",\n",
-      "    \"rdf\": \"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\n",
-      "  },\n",
-      "  \"@graph\": [\n",
-      "    {\n",
-      "      \"@id\": \"_:69ad64a678055ecde7601c70b432cdd3\",\n",
-      "      \"@type\": \"hdf:File\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"hdf:scalarDataspace\",\n",
-      "      \"@type\": \"hdf:scalarDataspace\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"hdf:H5T_IEEE_F64LE\",\n",
-      "      \"@type\": \"hdf:Datatype\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"_:03e43b66f42e2e7f00f2288985db2abf\",\n",
-      "      \"@type\": \"prov:Person\",\n",
-      "      \"foaf:firstName\": \"Matthias\",\n",
-      "      \"foaf:lastName\": \"Probst\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"https://orcid.org/0000-0001-8729-0482\",\n",
-      "      \"@type\": \"prov:Person\"\n",
-      "    }\n",
-      "  ]\n",
-      "}\n"
+      "@prefix dcterms: <http://purl.org/dc/terms/> .\n",
+      "@prefix ex: <https://example.org#> .\n",
+      "@prefix foaf: <http://xmlns.com/foaf/0.1/> .\n",
+      "@prefix hdf: <http://purl.allotrope.org/ontologies/hdf5/1.8#> .\n",
+      "@prefix prov: <http://www.w3.org/ns/prov#> .\n",
+      "@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .\n",
+      "\n",
+      "ex:tmp0.hdf a hdf:File ;\n",
+      "    hdf:rootGroup <https://example.org#tmp0.hdf/> .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/> a hdf:Group ;\n",
+      "    hdf:member <https://example.org#tmp0.hdf/contact>,\n",
+      "        <https://example.org#tmp0.hdf/nd-array>,\n",
+      "        <https://example.org#tmp0.hdf/test> ;\n",
+      "    hdf:name \"/\"^^xsd:string .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/contact> a hdf:Group ;\n",
+      "    hdf:attribute <https://example.org#tmp0.hdf/contact@fname>,\n",
+      "        <https://example.org#tmp0.hdf/contact@hint>,\n",
+      "        <https://example.org#tmp0.hdf/contact@lname> ;\n",
+      "    hdf:name \"/contact\"^^xsd:string ;\n",
+      "    dcterms:relation <https://orcid.org/0000-0001-8729-0482> .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/contact@fname> a hdf:StringAttribute ;\n",
+      "    hdf:data \"Matthias\"^^xsd:string ;\n",
+      "    hdf:name \"fname\" .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/contact@hint> a hdf:StringAttribute ;\n",
+      "    hdf:data \"This group could be representing a person.\"^^xsd:string ;\n",
+      "    hdf:name \"hint\" .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/contact@lname> a hdf:StringAttribute ;\n",
+      "    hdf:data \"Probst\"^^xsd:string ;\n",
+      "    hdf:name \"lname\" .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/nd-array> a hdf:Dataset ;\n",
+      "    hdf:chunk <https://example.org#tmp0.hdf/nd-array__chunk_dimensions> ;\n",
+      "    hdf:dataspace <https://example.org#tmp0.hdf/nd-array__dataspace> ;\n",
+      "    hdf:datatype hdf:H5T_IEEE_F64LE,\n",
+      "        \"H5T_FLOAT\" ;\n",
+      "    hdf:layout hdf:H5D_CHUNKED ;\n",
+      "    hdf:maximumSize 6 ;\n",
+      "    hdf:name \"/nd-array\" ;\n",
+      "    hdf:rank 2 ;\n",
+      "    hdf:size 6 .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/nd-array__chunk_dimension_0> a hdf:DataspaceDimension ;\n",
+      "    hdf:dimensionIndex 0 ;\n",
+      "    hdf:size 1 .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/nd-array__chunk_dimension_1> a hdf:DataspaceDimension ;\n",
+      "    hdf:dimensionIndex 1 ;\n",
+      "    hdf:size 3 .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/nd-array__chunk_dimensions> a hdf:ChunkDimension ;\n",
+      "    hdf:dimension <https://example.org#tmp0.hdf/nd-array__chunk_dimension_0>,\n",
+      "        <https://example.org#tmp0.hdf/nd-array__chunk_dimension_1> .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/nd-array__dataspace> a hdf:SimpleDataspace ;\n",
+      "    hdf:dimension <https://example.org#tmp0.hdf/nd-array__dataspace_dimension_0>,\n",
+      "        <https://example.org#tmp0.hdf/nd-array__dataspace_dimension_1> .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/nd-array__dataspace_dimension_0> a hdf:DataspaceDimension ;\n",
+      "    hdf:dimensionIndex 0 ;\n",
+      "    hdf:size 2 .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/nd-array__dataspace_dimension_1> a hdf:DataspaceDimension ;\n",
+      "    hdf:dimensionIndex 1 ;\n",
+      "    hdf:size 3 .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/test> a hdf:Dataset ;\n",
+      "    hdf:dataspace <https://example.org#tmp0.hdf/test__dataspace> ;\n",
+      "    hdf:datatype hdf:H5T_IEEE_F64LE,\n",
+      "        \"H5T_FLOAT\" ;\n",
+      "    hdf:layout hdf:H5D_CONTIGUOUS ;\n",
+      "    hdf:maximumSize -1 ;\n",
+      "    hdf:name \"/test\" ;\n",
+      "    hdf:rank 0 ;\n",
+      "    hdf:size 1 ;\n",
+      "    hdf:value 4.3e+00 .\n",
+      "\n",
+      "<https://example.org#tmp0.hdf/test__dataspace> a hdf:ScalarDataspace .\n",
+      "\n",
+      "<https://orcid.org/0000-0001-8729-0482> a prov:Person ;\n",
+      "    foaf:firstName \"Matthias\"^^xsd:string ;\n",
+      "    foaf:lastName \"Probst\"^^xsd:string .\n",
+      "\n",
+      "hdf:H5T_IEEE_F64LE a hdf:Datatype .\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "with h5tbx.File() as h5:\n",
     "    h5.create_dataset(name='test', data=4.3)\n",
+    "    h5.create_dataset(name='nd-array', data=np.random.rand(2, 3), chunks=(1,3))\n",
     "    grp = h5.create_group(name='contact')\n",
     "    grp.attrs['fname', rdflib.FOAF.firstName] = 'Matthias'\n",
     "    grp.attrs['lname', rdflib.FOAF.lastName] = 'Probst'\n",
@@ -100,10 +160,9 @@
     "    grp.rdf['hint'].definition = 'A hint gives helpful information on something.'\n",
     "    grp.rdf.type = rdflib.PROV.Person  # --> rdf.type = Person\n",
     "    grp.rdf.subject = 'https://orcid.org/0000-0001-8729-0482'  # -> @id='https://orcid.org/0000-0001-8729-0482'\n",
-    "\n",
-    "    print(h5.dump_jsonld(indent=2, structural=True, resolve_keys=True))\n",
     "    \n",
-    "graph = h5tbx.get_ld(h5.hdf_filename)"
+    "graph = h5tbx.get_ld(h5.hdf_filename, structural=True, file_uri=\"https://example.org#\", context={\"ex\": \"https://example.org#\"})\n",
+    "print(graph.serialize())"
    ]
   },
   {
@@ -113,9 +172,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "namespaces = {k: str(v) for k, v in dict(graph.namespaces()).items()}\n",
     "kg = kglab.KnowledgeGraph(\n",
     "    import_graph=graph,\n",
-    "    namespaces={k: str(v) for k, v in dict(graph.namespaces()).items()})"
+    "    namespaces=namespaces)"
    ]
   },
   {
@@ -182,19 +242,21 @@
      "text": [
       "{\n",
       "  \"@context\": {\n",
+      "    \"dcterms\": \"http://purl.org/dc/terms/\",\n",
       "    \"foaf\": \"http://xmlns.com/foaf/0.1/\",\n",
-      "    \"hdf\": \"http://purl.allotrope.org/ontologies/hdf5/1.8#\",\n",
-      "    \"rdf\": \"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\n",
+      "    \"prov\": \"http://www.w3.org/ns/prov#\"\n",
       "  },\n",
       "  \"@graph\": [\n",
       "    {\n",
-      "      \"@id\": \"_:af3b30750dbfd021eb8843274633ba46\",\n",
-      "      \"@type\": \"hdf:File\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"_:33501378e9a891ca7b7655ee472f25b4\",\n",
+      "      \"@id\": \"prov:Person\",\n",
       "      \"foaf:firstName\": \"Matthias\",\n",
       "      \"foaf:lastName\": \"Probst\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"https://example.org#tmp1.hdf/contact\",\n",
+      "      \"dcterms:relation\": {\n",
+      "        \"@id\": \"prov:Person\"\n",
+      "      }\n",
       "    }\n",
       "  ]\n",
       "}\n"
@@ -211,9 +273,9 @@
     "    grp.rdf['hint'].definition = 'A hint'\n",
     "    grp.rdf.subject = rdflib.PROV.Person\n",
     "    grp.attrs['@id'] = 'https://orcid.org/0000-0001-8729-0482'\n",
-    "    print(h5.dump_jsonld(indent=2, structural=False))\n",
+    "    print(h5.dump_jsonld(indent=2, structural=False, file_uri=\"https://example.org#\"))\n",
     "\n",
-    "graph = h5tbx.get_ld(h5.hdf_filename, structural=False, use_simple_bnode_value=True)"
+    "graph = h5tbx.get_ld(h5.hdf_filename, structural=False, file_uri=\"https://example.org#\")"
    ]
   },
   {
@@ -291,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
