--- a/docs/userguide/repository/zenodo.ipynb
+++ b/docs/userguide/repository/zenodo.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b001b211-4771-48b2-8a0f-0a0b75b3de01",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b1d04f69-5da4-40e8-9669-580bb4666cb0",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3811ddda-5023-405d-b109-77b342c568b0",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "90d65507-8c0d-428b-8105-7e436461e1be",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e337c361-6d48-46cc-a3d7-292cadfc28fa",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9bc60428-785f-41aa-a356-2114e0d183ac",
    "metadata": {},
    "outputs": [],
@@ -175,10 +175,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "500cb79c-76a4-4f3f-a84f-da36b1e63d5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'tmp0.jsonld': RepositoryFile(tmp0.jsonld),\n",
+       " 'tmp0.hdf': RepositoryFile(tmp0.hdf)}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "repo.files"
    ]
@@ -195,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fbf04793-b7eb-4377-a904-edb91542b056",
    "metadata": {},
    "outputs": [],
@@ -213,12 +225,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "02290359-b13b-413d-9b93-9706b3ab087d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "repo.upload_file(filename, metamapper=my_meta_mapper, overwrite=True)"
+    "repo.upload_file(filename, metamapper=my_meta_mapper)"
    ]
   },
   {
@@ -231,10 +243,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4e75f4fc-6311-470c-9204-93c1c5d768d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tmp0.jsonld\n",
+      "tmp0.hdf\n",
+      "tmp0.txt\n"
+     ]
+    }
+   ],
    "source": [
     "for file in repo.files:\n",
     "    print(file)"
