--- a/docs/userguide/repository/zenodo.ipynb
+++ b/docs/userguide/repository/zenodo.ipynb
@@ -182,8 +182,8 @@
     {
      "data": {
       "text/plain": [
-       "{'tmp0.hdf': RepositoryFile(tmp0.hdf),\n",
-       " 'tmp0.jsonld': RepositoryFile(tmp0.jsonld)}"
+       "{'tmp0.jsonld': RepositoryFile(tmp0.jsonld),\n",
+       " 'tmp0.hdf': RepositoryFile(tmp0.hdf)}"
       ]
      },
      "execution_count": 7,
@@ -225,12 +225,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "02290359-b13b-413d-9b93-9706b3ab087d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "repo.upload_file(filename, metamapper=my_meta_mapper, overwrite=True)"
+    "repo.upload_file(filename, metamapper=my_meta_mapper)"
    ]
   },
   {
@@ -251,8 +251,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tmp0.hdf\n",
       "tmp0.jsonld\n",
+      "tmp0.hdf\n",
       "tmp0.txt\n"
      ]
     }
@@ -287,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
